[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Npc_AI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=12]
radius = 3.0

[sub_resource type="CircleShape2D" id=13]

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.0
height = 14.0

[node name="Npc_Ai" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Area" type="Node2D" parent="."]

[node name="DetectRight" type="Area2D" parent="Area"]
position = Vector2( 14, 0 )

[node name="Detect" type="CollisionShape2D" parent="Area/DetectRight"]
shape = SubResource( 12 )

[node name="DetectLeft" type="Area2D" parent="Area"]
position = Vector2( -14, 0 )

[node name="Detect" type="CollisionShape2D" parent="Area/DetectLeft"]
shape = SubResource( 12 )

[node name="Timer" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Timer"]
autostart = true

[node name="BreakTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="Custom" type="Node2D" parent="."]

[node name="InteractArea" type="Area2D" parent="Custom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Custom/InteractArea"]
position = Vector2( 0, 3 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 13 )

[node name="Body-Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 11 )

[connection signal="body_entered" from="Area/DetectRight" to="." method="_on_DetectRight_body_entered"]
[connection signal="body_exited" from="Area/DetectRight" to="." method="_on_DetectRight_body_exited"]
[connection signal="body_entered" from="Area/DetectLeft" to="." method="_on_DetectLeft_body_entered"]
[connection signal="body_exited" from="Area/DetectLeft" to="." method="_on_DetectLeft_body_exited"]
[connection signal="timeout" from="Timer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="body_entered" from="Custom/InteractArea" to="." method="_on_InteractArea_body_entered"]
